<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    tools:context=".fragments.RestaurantListFragment">

    <Button
        android:id="@+id/btnAll"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#F08647"
        android:gravity="center"
        android:text="@string/btnAll"
        android:textAllCaps="false"
        android:fontFamily="@font/robotoblack"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMyRecipes"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_card"
        android:backgroundTint="#F0F3FA"
        android:gravity="center"
        android:text="@string/btnMyRecepies"
        android:textAllCaps="false"
        android:fontFamily="@font/robotoblack"
        android:textColor="#5C5D62"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnAll"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAddToCart"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#E3E3E3"
        android:contentDescription="@string/add_to_cart"
        android:src="@drawable/ic_add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodCartCount"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/circle_corner"
        android:backgroundTint="#F69C67"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshFoodCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/marginLeftAndRight"
        android:layout_marginTop="72dp"
        android:layout_marginRight="@dimen/marginLeftAndRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAll">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFoodCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeftAndRight"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/marginLeftAndRight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAll" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>